--- a/css/main.css
+++ b/css/main.css
@@ -7162,7 +7162,7 @@ html {
 .background-1 {
   font-family: "Fira Sans", sans-serif;
   height: 100vh;
-  background: url(img/1st-section.jpg);
+  background: url(/img/1st-section.jpg);
   background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -7251,7 +7251,7 @@ html {
   border: 3px solid #d8d0d0; }
 
 .background-2 {
-  background: url(img/2nd-section.jpg);
+  background: url(../img/2nd-section.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
@@ -7291,7 +7291,7 @@ html {
         font-size: 1.5rem; }
 
 .background-3 {
-  background: url(img/3rd-section.jpg);
+  background: url(./img/3rd-section.jpg);
   background-size: cover;
   background-position: center center;
   padding: 30rem 1.5rem; }
