--- a/css/main.css
+++ b/css/main.css
@@ -7162,7 +7162,7 @@ html {
 .background-1 {
   font-family: "Fira Sans", sans-serif;
   height: 100vh;
-  background: url(/img/1st-section.jpg);
+  background: url(../img/1st-section.jpg);
   background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -7291,7 +7291,7 @@ html {
         font-size: 1.5rem; }
 
 .background-3 {
-  background: url(./img/3rd-section.jpg);
+  background: url(../img/3rd-section.jpg);
   background-size: cover;
   background-position: center center;
   padding: 30rem 1.5rem; }
@@ -7320,7 +7320,7 @@ html {
     bottom: 180px; }
 
 .background-4 {
-  background: url(img/4th-section.jpg);
+  background: url(../img/4th-section.jpg);
   background-size: cover;
   background-position: center center;
   padding: 25rem 1.5rem; }
@@ -7355,7 +7355,7 @@ html {
       border: 0.5rem solid orange; }
 
 .background-5 {
-  background: url(img/5th-section.jpg);
+  background: url(../img/5th-section.jpg);
   background-size: cover;
   background-position: center center;
   padding: 15rem 1.5rem; }
